--- a/index.html
+++ b/index.html
@@ -7,40 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<script>
-let num1 = prompt('первое число');
-num1 = Number(num1);
-
-let num2 = prompt('второе число');
-num2 = Number(num2);
-
-let operator = prompt('оператор (/,+,*,-)');
-
-let answer = prompt('результат');
-
-
-function func() {
-  	// переменная для результата
-    var result;
-    // получаем первое и второе число
-    var num1 = Number(document.getElementById("num1").value);
-    var num2 = Number(document.getElementById("num2").value);
-    // смотрим, что было в переменной с действием, и действуем исходя из этого
-    switch (op) {
-      case '+':
-        result = num1 + num2;
-        break;
-      case '-':
-        result = num1 - num2;
-        break;
-      case '*':
-        result = num1 * num2;
-        break;
-      case '/':
-        result = num1 / num2;
-        break;
-    }
-}
-	</script>
+  <script src="main.js"></script>
 </body>
 </html>
